# cpp_notes_code

./: .clangd  .gitignore  del_out.sh  geteuid.c  lambda_template.cpp  lbpq_test.cpp  no_unique_address.cpp  warning.cpp
Feature_Testing_Macro/: has_include.cpp
Module/: .clangd  main.cpp
asio_learn/: .clangd  async_https  makefile  sync_http  sync_https  timer
auto_in_func/: auto_as_return.cpp  auto_in_lambda.cpp  auto_in_template.cpp
const_keyword/: const_lambda.cpp  if_constexpr.cpp  is_constant_evaluated.cpp
coroutine/asyncfs/: .clangd  CMakeLists.txt
coroutine/asyncfs/src/core/: concept.ixx  concepts.ixx  core.ixx
coroutine/asyncfs/src/task/: asyncTaskLoop.ixx  asyncTaskQueue.ixx  asyncify.ixx  coroutine.ixx
future_promise/: a.out  async_example.cpp  complex_example.cpp  shared_future_example.cpp  simple_example.cpp
metaprogramming/: class01.cpp
modules_demo/: .gitignore  compile_commands.json  xmake.lua
namespace/: inline_namespace.cpp  nested_namespace.cpp
nd_compute/: CMakeLists.txt  main.cpp
nd_compute/numcpp/: algorithm.ixx  concepts.ixx  creation.ixx  numcpp.ixx  types.ixx  utils.ixx
nd_compute/numcpp/algorithm/: aggregate.ixx  algorithm.ixx  basic.ixx  universial.ixx
nd_compute/numcpp/api/: creation.ixx
nd_compute/numcpp/array/: array.ixx  view.ixx
new_type/: char_type.cpp
rangers_view/: a.out  main.cpp
source_macro/: source_macro.cpp  source_macro_2.cpp
substitution_failure_is_not_an_error/: enable_if.cpp
type_convert/: bit_cast.cpp
type_infer/: decltype.cpp  decltype推导规则.md  typeof_typeid.cpp
(+22 files in other folders)
